# parquet-viewer

./: .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  Dioxus.toml  Dockerfile  README.md  Trunk.toml  flake.nix  index.html  rust-toolchain.toml  tailwind.config.js  tailwind.css
.cargo/: config.toml
.cursor/rules/: ui.mdc
.github/actions/free-disk-space/: action.yml
.github/workflows/: ci.yml  gh-pages-deploy.yml  publish-vscode-extension.yml
assets/: tailwind.css  toast.css
assets/styling/: main.css
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: main.rs
doc/: tailwind.css
llm-backend/: Cargo.toml  README.md  wrangler.toml
llm-backend/src/: lib.rs
public/: manifest.json  sw.js
src/: main.rs  nl_to_sql.rs  object_store_cache.rs  parquet_ctx.rs  parquet_reader.rs  query_input.rs  query_results.rs  row_group_column.rs  settings.rs  tests.rs  utils.rs
src/components/: file_info.rs  mod.rs  page_info.rs  query_input.rs  record_batch_table.rs  statistics.rs  theme_provider.rs  ui.rs
src/components/toast/: component.rs
src/storage/: mod.rs  object_store_cache.rs  readers.rs
src/views/: main_layout.rs  metadata.rs  mod.rs  parquet_reader.rs  plan_visualizer.rs  query_input.rs  query_results.rs  schema.rs  settings.rs  web_file_store.rs
src/views/parquet_rewriter/: mod.rs  tool.rs
src/views/parquet_utils/: mod.rs  parquet_merge.rs
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/scripts/: copy-dist.js
vscode-extension/src/: extension.ts  parquetEditorProvider.ts
