[package]
name = "parquet-viewer"
version = "0.1.31"
edition = "2024"

[dependencies]
arrow = { version = "56.1.0", default-features = false }
arrow-schema = { version = "56.1.0", default-features = false }
arrow-array = { version = "56.1.0", default-features = false }
arrow-cast = { version = "56.1.0", default-features = false }
bytes = "1.10.1"
console_error_panic_hook = "0.1.7"
datafusion = { version = "50.0.0", default-features = false, features = [
	"datetime_expressions",
	"parquet",
] }
dioxus = { version = "0.7.2", features = ["router"] }
parquet = { version = "56.1.0", features = [
	"arrow",
	"snap",
	"flate2",
	"lz4",
	"async",
	"zstd",
], default-features = false }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.53"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.80", features = [
	"HtmlInputElement",
	"FileList",
	"File",
	"Storage",
	"Window",
	"Navigator",
	"Clipboard",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3.31"
zstd = { version = "*", features = ["wasm", "thin"], default-features = false }
serde = { version = "1.0" }
opendal = { version = "0.54.0", default-features = false, features = [
	"services-s3",
	"services-http",
] }
object_store_opendal = { version = "0.54.0", features = ["send_wrapper"] }
object_store = "0.12.3"
async-trait = "0.1.89"
url = "2.5.7"
anyhow = "1.0"
uuid = { version = "1.18.1", features = ["v4", "js"] }
tokio = { version = "1.48", features = ["rt"] }
gloo-net = "0.6.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
byte-unit = "5.1.6"
tracing = "0.1.43"

[profile.release]
strip = true
opt-level = "s"
panic = "abort"

[dev-dependencies]
wasm-bindgen-test = "0.3.53"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
