[package]
name = "parquet-viewer"
version = "0.1.31"
edition = "2024"

[dependencies]
arrow = { version = "57.1.0", default-features = false }
arrow-schema = { version = "57.1.0", default-features = false }
arrow-array = { version = "57.1.0", default-features = false }
arrow-cast = { version = "57.1.0", default-features = false }
bytes = "1.11.0"
console_error_panic_hook = "0.1.7"
datafusion = { version = "51.0.0", default-features = false, features = [
	"datetime_expressions",
	"parquet",
	"sql",
] }
datafusion-common = { version = "51.0.0", default-features = false }
dioxus = { version = "0.7.3", features = ["router"] }
parquet = { version = "57.1.0", features = [
	"arrow",
	"snap",
	"flate2",
	"lz4",
	"async",
	"zstd",
], default-features = false }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.83", features = [
	"HtmlInputElement",
	"FileList",
	"File",
	"Storage",
	"Window",
	"Navigator",
	"Clipboard",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3.31"
zstd = { version = "*", features = ["wasm", "thin"], default-features = false }
serde = { version = "1.0" }
opendal = { version = "0.55.0", default-features = false, features = [
	"services-s3",
	"services-http",
] }
object_store_opendal = { version = "0.55.0", features = ["send_wrapper"] }
object_store = "0.12.4"
async-trait = "0.1.89"
url = "2.5.7"
anyhow = "1.0"
uuid = { version = "1.19.0", features = ["v4", "js"] }
tokio = { version = "1.48", features = ["rt"] }
gloo-net = "0.6.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
byte-unit = "5.2.0"
tracing = "0.1.44"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[profile.release]
strip = true
opt-level = "s"
panic = "abort"

[profile.debug-strip]
inherits = "dev"
strip = true
panic = "abort"
opt-level = 2

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
